Fix table borders not showing

--- a/src/app/pages/solution/solution.component.scss
+++ b/src/app/pages/solution/solution.component.scss
@@ -336,6 +336,7 @@ $cx-font-size-24: 24px;
 	color: #6c757d;
 
 	thead::after {
+		content: "";
 		border-bottom: 1px solid #e4e4e4;
 		display: block;
 		position: absolute;
@@ -361,6 +362,7 @@ $cx-font-size-24: 24px;
 		height: 42px;
 
 		&::after {
+			content: "";
 			border-bottom: 1px solid #e4e4e4;
 			display: block;
 			position: absolute;
